--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
             <div class="col-lg-10">
                 <div class="d-inline-block rounded-pill bg-dark bg-opacity-50 py-1 px-3 mb-3 text-white">WORSHIP NIGHT VIGIL</div>
                 <h1 class="display-4 fw-bold text-white mb-2">
-                    <span class="d-block">NAIVASHA</span>
+                    <span class="d-block">NAIROBI</span>
                     <span class="edition-text">Edition</span>
                 </h1>
                 <p class="lead text-white mb-4">An all-night worship experience from 9:00 PM to 5:00 AM</p>
