--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                     <p class="mb-0"><i class="fas fa-video me-2"></i>We meet via Google Meet</p>
                                 </div>
                                 <div class="d-flex flex-column flex-sm-row justify-content-center gap-2">
-                                    <a class="btn btn-primary btn-lg px-4 py-2" href="https://chat.whatsapp.com/JGq8EKGuK0cElkZ0bn1Jur?mode=ems_wa_c">
+                                    <a class="btn btn-primary btn-lg px-4 py-2" href="https://chat.whatsapp.com/IPnkuFWRmvJA2bqtVHZoka">
                                         <i class="fab fa-whatsapp me-2"></i>Join WhatsApp
                                     </a>
                                     <a class="btn btn-outline-light btn-lg px-4 py-2" href="javascript:void(0);" data-bs-toggle="modal" data-bs-target="#supportModal">
@@ -222,7 +222,7 @@
                                     <p class="mb-0"><i class="fas fa-book me-2"></i>Read Rules in WhatsApp bio before joining</p>
                                 </div>
                                 <div class="d-flex flex-column flex-sm-row justify-content-center gap-2">
-                                    <a class="btn btn-primary btn-lg px-4 py-2" href="https://chat.whatsapp.com/JGq8EKGuK0cElkZ0bn1Jur?mode=ems_wa_c">
+                                    <a class="btn btn-primary btn-lg px-4 py-2" href="https://chat.whatsapp.com/IPnkuFWRmvJA2bqtVHZoka">
                                         <i class="fab fa-whatsapp me-2"></i>Join WhatsApp
                                     </a>
                                     <a class="btn btn-outline-light btn-lg px-4 py-2" href="javascript:void(0);" data-bs-toggle="modal" data-bs-target="#supportModal">
@@ -643,7 +643,7 @@
             </div>
             <div class="modal-footer justify-content-center">
                 <a href="index.html" class="btn btn-primary me-2">Back to Home</a>
-                <a href="https://chat.whatsapp.com/JGq8EKGuK0cElkZ0bn1Jur?mode=ems_wa_c" class="btn btn-outline-primary">Join WhatsApp Group</a>
+                <a href="https://chat.whatsapp.com/IPnkuFWRmvJA2bqtVHZoka" class="btn btn-outline-primary">Join WhatsApp Group</a>
             </div>
         </div>
     </div>
@@ -818,7 +818,7 @@
     <div class="marquee-container w-100 bg-dark">
         <marquee behavior="scroll" direction="left" scrollamount="5" class="text-white py-2" style="color: #ffffff;">
             Join our community for prayers and consultation. Experience the power of unity in faith. 
-            <a href="https://chat.whatsapp.com/JGq8EKGuK0cElkZ0bn1Jur?mode=ems_wa_c" style="color: green; text-decoration: underline;">Click Join Us Button To Join Us!</a>
+            <a href="https://chat.whatsapp.com/IPnkuFWRmvJA2bqtVHZoka" style="color: green; text-decoration: underline;">Click Join Us Button To Join Us!</a>
         </marquee>
     </div>
 
@@ -839,7 +839,7 @@
                         <span class="text-primary"> Founded By You & I</span>
                     </div>
                     <p class="mb-5" style="color: #000000;">Through our online platform, we connect individuals with dedicated prayer partners, organize powerful night prayer sessions, and bring believers together for retreats, fasting, and deep spiritual conversations. Join us as we build a strong, Christ-centered community committed to making a difference through faith and prayer.</p>
-                    <a class="btn btn-primary py-2 px-3 me-3" href="https://chat.whatsapp.com/JGq8EKGuK0cElkZ0bn1Jur?mode=ems_wa_c">
+                    <a class="btn btn-primary py-2 px-3 me-3" href="https://chat.whatsapp.com/IPnkuFWRmvJA2bqtVHZoka">
                         Join Us
                         <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
                             <i class="fa fa-arrow-right"></i>
@@ -922,7 +922,7 @@
                                     <a href="#gallery" class="btn btn-outline-primary btn-sm">
                                         <i class="fas fa-images me-1"></i>Gallery
                                     </a>
-                                    <a href="https://chat.whatsapp.com/JfDJRHbyT8NIgMivX0XPip" class="btn btn-outline-secondary btn-sm">
+                                    <a href="https://chat.whatsapp.com/IPnkuFWRmvJA2bqtVHZoka" class="btn btn-outline-secondary btn-sm">
                                         <i class="fas fa-play-circle me-1"></i>Videos
                                     </a>
                                 </div>
@@ -959,7 +959,7 @@
                                     <a href="#gallery" class="btn btn-outline-primary btn-sm">
                                         <i class="fas fa-images me-1"></i>Gallery
                                     </a>
-                                    <a href="https://chat.whatsapp.com/JfDJRHbyT8NIgMivX0XPip" class="btn btn-outline-secondary btn-sm">
+                                    <a href="https://chat.whatsapp.com/IPnkuFWRmvJA2bqtVHZoka" class="btn btn-outline-secondary btn-sm">
                                         <i class="fas fa-play-circle me-1"></i>Videos
                                     </a>
                                 </div>
@@ -996,7 +996,7 @@
                                     <a href="#gallery" class="btn btn-outline-primary btn-sm">
                                         <i class="fas fa-images me-1"></i>Gallery
                                     </a>
-                                    <a href="https://chat.whatsapp.com/JfDJRHbyT8NIgMivX0XPip" class="btn btn-outline-secondary btn-sm">
+                                    <a href="https://chat.whatsapp.com/IPnkuFWRmvJA2bqtVHZoka" class="btn btn-outline-secondary btn-sm">
                                         <i class="fas fa-play-circle me-1"></i>Testimonies
                                     </a>
                                 </div>
@@ -1460,7 +1460,7 @@
                     
                     <div class="text-center mt-4">
                         <p class="mb-0">Prefer to join our WhatsApp group directly?</p>
-                        <a href="https://chat.whatsapp.com/JGq8EKGuK0cElkZ0bn1Jur?mode=ems_wa_c" class="btn btn-success btn-sm mt-2">
+                        <a href="https://chat.whatsapp.com/IPnkuFWRmvJA2bqtVHZoka" class="btn btn-success btn-sm mt-2">
                             <i class="fab fa-whatsapp me-2"></i>Join WhatsApp Group
                         </a>
                     </div>
